[workspace]
members = [
    "consensus/safe_arith",
    "consensus/ssz",
    "consensus/ssz_derive",
    "consensus/ssz_types",
    "consensus/serde_utils",

    "consensus/tree_hash",
    "consensus/tree_hash_derive",
    "consensus/merkle_proof",

    "crypto/eth2_hashing",
]

[patch]
[patch.crates-io]
fixed-hash = { git = "https://github.com/paritytech/parity-common", rev="df638ab0885293d21d656dc300d39236b69ce57d" }
warp = { git = "https://github.com/macladson/warp", rev="7e75acc368229a46a236a8c991bf251fe7fe50ef" }
eth2_ssz = { path = "consensus/ssz" }
eth2_ssz_derive = { path = "consensus/ssz_derive" }
eth2_ssz_types = { path = "consensus/ssz_types" }
eth2_hashing = { path = "crypto/eth2_hashing" }
tree_hash = { path = "consensus/tree_hash" }
tree_hash_derive = { path = "consensus/tree_hash_derive" }
eth2_serde_utils = { path = "consensus/serde_utils" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
