[package]
name = "merkle_proof"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"

[dependencies]
ethereum-types = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
eth2_hashing = { path = "../../crypto/eth2_hashing", default-features = false, features = ["zero_hash_cache"] }
safe_arith = { path = "../safe_arith" }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
default = ["std"]
std = ["ethereum-types/std", "eth2_hashing/std", "lazy_static"]
arbitrary = ["ethereum-types/arbitrary"]
