[package]
name = "eth2_ssz"
version = "0.4.1"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = "2021"
description = "SimpleSerialize (SSZ) as used in Ethereum 2.0"
license = "Apache-2.0"

[lib]
name = "ssz"

[dev-dependencies]
eth2_ssz_derive = { version = "0.3.0", path = "../ssz_derive" }
ethereum-types = { version = "0.12.1" }

[dependencies]
ethereum-types = { version = "0.12.1", default-features = false, features = ["rlp", "serialize"] }
smallvec = { version = "1.6.1", features = ["const_generics"] }
itertools = { version = "0.10.3", default-features = false }

[features]
default = ["std"]
std = ["ethereum-types/std", "itertools/use_std"]
arbitrary = ["ethereum-types/arbitrary"]
