[package]
name = "tree_hash"
version = "0.4.1"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Efficient Merkle-hashing as used in Ethereum 2.0"

[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { path = "../tree_hash_derive" }
eth2_ssz = { path = "../ssz" }
eth2_ssz_derive = { path = "../ssz_derive" }

[dependencies]
ethereum-types = { version = "0.12.1", default-features = false, features = ["rlp", "serialize"] }
eth2_hashing = { path = "../../crypto/eth2_hashing" }
smallvec = "1.6.1"

[features]
default = ["std"]
std = ["ethereum-types/std"]
arbitrary = ["ethereum-types/arbitrary"]
