[package]
name = "tree_hash"
version = "0.4.1"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Efficient Merkle-hashing as used in Ethereum 2.0"

[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { version = "0.4.0", path = "../tree_hash_derive" }
types = { path = "../types" }
beacon_chain = { path = "../../beacon_node/beacon_chain" }
eth2_ssz = { version = "0.4.1", path = "../ssz" }
eth2_ssz_derive = { version = "0.3.0", path = "../ssz_derive" }

[dependencies]
ethereum-types = { version = "0.12.1", default-features = false, features = ["rlp", "serialize"] }
eth2_hashing = { version = "0.3.0", path = "../../crypto/eth2_hashing", default-features = false, features = ["zero_hash_cache"] }
smallvec = "1.6.1"

[features]
default = ["std"]
std = ["ethereum-types/std", "eth2_hashing/std"]
arbitrary = ["ethereum-types/arbitrary"]
