[package]
name = "bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

[dependencies]
eth2_ssz = { version = "0.4.1", path = "../../consensus/ssz", default-features = false }
tree_hash = { version = "0.4.1", path = "../../consensus/tree_hash", default-features = false }
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v1.4.2", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
serde_derive = "1.0.116"
eth2_serde_utils = { version = "0.1.1", path = "../../consensus/serde_utils", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
eth2_hashing = { version = "0.3.0", path = "../eth2_hashing", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false, features = [] }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
blst = { version = "0.3.3", optional = true }
ckb-blst = { version = "0.100.0", optional = true }

[features]
default = ["std", "supranational"]
std = [
    "eth2_ssz/std", "tree_hash/std", "rand", "serde/std",
    "eth2_serde_utils/std", "hex/std", "eth2_hashing/std", "ethereum-types/std"
]
fake_crypto = []
milagro = ["milagro_bls"]
supranational = ["blst"]
supranational-portable = ["supranational", "blst/portable"]
supranational-force-adx = ["supranational", "blst/force-adx"]
ckb-vm = ["ckb-blst"]
