[package]
name = "eth2_hashing"
version = "0.3.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Hashing primitives used in Ethereum 2.0"

[dev-dependencies]
rustc-hex = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = ["zero_hash_cache"]
zero_hash_cache = []
