[package]
name = "eth2_hashing"
version = "0.3.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Hashing primitives used in Ethereum 2.0"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
cpufeatures = { version = "0.2.5", optional = true }
ring = { version = "0.16.19", optional = true }
sha2 = { version = "0.10.2", default-features = false, features = [] }

[dev-dependencies]
rustc-hex = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = ["std", "zero_hash_cache", "dynamic-impl"]
std = ["sha2/std", "lazy_static"]
zero_hash_cache = []
detect-cpufeatures = ["cpufeatures"]
dynamic-impl = ["detect-cpufeatures", "ring"]
